--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -10,9 +10,24 @@
   top: 10px;
   right: 10px;
   background-color: #333;
-  top: 0;
-  right: 0;
   padding: 20px;
+}
+
+.product-content {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.product-info img {
+  margin-right: 20px;
+  width: 500px;
+  height: 600px;
+}
+
+.product-details {
+  display: flex;
+  flex-direction: column;
 }
 
 /* Header styles */
