--- a/templates/product.ejs
+++ b/templates/product.ejs
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <!DOCTYPE html>
+    <html>
+    <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= product.ProductName %></title>
-</head>
-<body>
-    <h1><%= product.ProductName %></h1>
-    <img src="/images/<%= product.Image %>" alt="<%= product.ProductName %>" style="width: 300px; height: 300px;">
-    <p>Price: $<%= product.Price %></p>
-    <p><a href="/">Back to Shop</a></p>
-</body>
-</html>
+    </head>
+    <body>
+    
+    <main class="productInfo">
+        <div class="product-content">
+            <div class="product-details">
+                <h1><%= product.ProductName %></h1>
+                <img src="/images/<%= product.Image %>" alt="<%= product.ProductName %>" style="width: 300px; height: 300px;">
+                <p>Price: $<%= product.Price %></p>
+                <form method="POST" action="/cart/add">
+                    <input type="hidden" name="productId" value="<%= product.productId %>" />
+                  
+                    <label>Select Quantity:</label><br>
+                    <input type="radio" name="quantity" value="1" checked> 1<br>
+                    <input type="radio" name="quantity" value="2"> 2<br>
+                    <input type="radio" name="quantity" value="3"> 3<br>
+                  
+                    <button type="submit">Add To Cart</button>
+                  </form>
+            </div>
+        </div>
+    </main>
+    
+    </body>
+    </html>
